tests/src/frontend/typechecking/invalid/named_default_constructor_multi.sk
base class A{x: String = "World"}
base class B{y: String}
class C{a: String, b: String = ", "} extends A, B

fun main(): void {
  c = C{a => "Hello"}; // missing y
  print_raw(c.a + c.b + c.x + c.y)
}
